--- a/my-react-app/index.html
+++ b/my-react-app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,8 @@
     <title>React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%; height: 100vh"></div>
+    <div id="modal-parent"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
